fix:  add whitespaces and style

--- a/style.css
+++ b/style.css
@@ -130,7 +130,6 @@ img {
   font-weight: var(--font-weight);
   align-items: center;
 }
-
 @media screen and (max-width: 768px) {
   body{
     margin: 0;
@@ -145,14 +144,13 @@ img {
     top: var(--header-height);
     right: -100%;
     width: 50%;
-    height: 50%;
+    height: 80%;
     padding: 2rem;
     border-radius: 50% 0 50% 50%;
     background-color: var(--bg-color);
     transition: 0.5s ease;
     text-align: center;
   }
-
 }
 .nav__item {
   margin-bottom: var(--mb-4);
@@ -236,7 +234,7 @@ img {
   margin-top: var(--mb-6);
   width: 250px;
   background-color: #33cc66;
-  border-radius:50%;
+  border-radius:10% 40% 10% 60%;
 }
 .home__img:hover{
 
@@ -333,6 +331,7 @@ transition: 2s ease;
   line-height: 1;
   white-space: pre-wrap;
   word-break: break-all;
+  text-align: center;
 }
 pre{
   white-space: pre-wrap;
@@ -393,7 +392,6 @@ pre{
 .education li strong{
   color: var(--accent-color);
 }
-
 .education__list li{
   font-weight: 600;
 }
